[tool.poetry]
name = "densu-backend"
version = "0.1.0"
description = ""
authors = ["densu <densu116@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
tortoise-orm = "^0.25.1"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
pydantic = "^2.11.7"
pytest = "^8.3.2"
black = "^24.8.0"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
hypercorn = "^0.17.3"
requests = "2.27.1"
cryptography = "^43.0.0"
fastapi-utils = "^0.7.0"
python-jose = "^3.3.0"
bcrypt = "3.2.0"
python-multipart = "^0.0.20"
chardet = "^5.2.0"
urllib3 = "<2"
asyncpg = "^0.30.0"
dotenv = "^0.9.9"
cos-python-sdk-v5 = "^1.9.37"
uuid = "^1.30"
pypinyin = "^0.55.0"
boto3 = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
